--- a/Resources/Prototypes/Voice/speech_emote_sounds.yml
+++ b/Resources/Prototypes/Voice/speech_emote_sounds.yml
@@ -475,7 +475,7 @@
     Sigh:
       collection: MaleSigh
     Scream:
-      collection: VulpkaninScreams
+      collection: MaleScreams # Misfit - VulpkaninScreams to MaleScreams
     Growl:
       collection: VulpkaninGrowls
     Snarl:
@@ -503,7 +503,7 @@
     Sigh:
       collection: FemaleSigh
     Scream:
-      collection: VulpkaninScreams
+      collection: FemaleScreams # Misfit - VulpkaninScreams to MaleScreams
     Growl:
       collection: VulpkaninGrowls
     Snarl:
