--- a/Resources/Prototypes/Entities/Mobs/Species/vulpkanin.yml
+++ b/Resources/Prototypes/Entities/Mobs/Species/vulpkanin.yml
@@ -10,7 +10,7 @@
   - type: MessyDrinker
     spillChance: 0.33
   - type: Icon
-    sprite: Mobs/Species/Vulpkanin/parts.rsi
+    sprite: _Misfit/Mobs/Species/Vulpkanin/parts.rsi # Misfit - Change to Paradise based sprites
     state: full
   - type: Body
     prototype: Vulpkanin
