--- a/Resources/Prototypes/Species/vulpkanin.yml
+++ b/Resources/Prototypes/Species/vulpkanin.yml
@@ -4,7 +4,7 @@
   roundStart: true
   prototype: MobVulpkanin
   sprites: MobVulpkaninSprites
-  defaultSkinTone: "#5a3f2d"
+  defaultSkinTone: "#ffffff" # Misfit - Changed from 5a3f2d to ffffff
   markingLimits: MobVulpkaninMarkingLimits
   dollPrototype: MobVulpkaninDummy
   skinColoration: VulpkaninColors
