--- a/Resources/Prototypes/Entities/Mobs/Customization/Markings/tattoos.yml
+++ b/Resources/Prototypes/Entities/Mobs/Customization/Markings/tattoos.yml
@@ -114,7 +114,7 @@
   id: TattooEyeRight
   bodyPart: Eyes
   markingCategory: [Head]
-  speciesRestriction: [Human, SlimePerson, Reptilian, Dwarf]
+  speciesRestriction: [Human, SlimePerson, Reptilian, Dwarf, Vulpkanin] # Misfit - added vulpkanin
   coloring:
     default:
       type:
@@ -128,7 +128,7 @@
   id: TattooEyeLeft
   bodyPart: Eyes
   markingCategory: Head
-  speciesRestriction: [Human, SlimePerson, Reptilian, Dwarf]
+  speciesRestriction: [Human, SlimePerson, Reptilian, Dwarf, Vulpkanin] # Misfit - added vulpkanin
   coloring:
     default:
       type:
@@ -166,33 +166,7 @@
   - sprite: Mobs/Customization/tattoos.rsi
     state: tattoo_eye_moth_l
 
-- type: marking
-  id: TattooEyeVulpkaninRight
-  bodyPart: Eyes
-  markingCategory: [Head]
-  speciesRestriction: [Vulpkanin]
-  coloring:
-    default:
-      type:
-        !type:EyeColoring
-          negative: true
-  sprites:
-  - sprite: Mobs/Customization/tattoos.rsi
-    state: tattoo_eye_vulpkanin_r
-
-- type: marking
-  id: TattooEyeVulpkaninLeft
-  bodyPart: Eyes
-  markingCategory: Head
-  speciesRestriction: [Vulpkanin]
-  coloring:
-    default:
-      type:
-        !type:EyeColoring
-          negative: true
-  sprites:
-  - sprite: Mobs/Customization/tattoos.rsi
-    state: tattoo_eye_vulpkanin_l
+# Misfit - removed vulpkanin eye tattoo in exchange for the human one
 
 - type: marking
   id: TattooEyeshadowUpper
