--- a/Resources/Prototypes/Entities/Mobs/Customization/Markings/Vulpkanin/vulpkanin_tail.yml
+++ b/Resources/Prototypes/Entities/Mobs/Customization/Markings/Vulpkanin/vulpkanin_tail.yml
@@ -66,3 +66,33 @@
       state: vulp
     - sprite: Mobs/Customization/Vulpkanin/tail_markings.rsi
       state: vulp-fade
+
+# Begin Misfit additions
+- type: marking
+  id: VulpTailCoyote # This specifically was in the upstream folder but unused for some... reason
+  bodyPart: Tail
+  markingCategory: Tail
+  speciesRestriction: [ Vulpkanin ]
+  sprites:
+  - sprite: Mobs/Customization/Vulpkanin/tail_markings.rsi
+    state: coyote
+
+- type: marking
+  id: VulpTailFox
+  bodyPart: Tail
+  markingCategory: Tail
+  speciesRestriction: [ Vulpkanin ]
+  sprites:
+  - sprite: Mobs/Customization/Vulpkanin/tail_markings.rsi
+    state: fox
+  - sprite: Mobs/Customization/Vulpkanin/tail_markings.rsi
+    state: fox-tip
+
+- type: marking
+  id: VulpTailOtie
+  bodyPart: Tail
+  markingCategory: Tail
+  speciesRestriction: [ Vulpkanin ]
+  sprites:
+  - sprite: Mobs/Customization/Vulpkanin/tail_markings.rsi
+    state: otie
